<resources>
    <string name="app_name">SuiviColis</string>
    <string name="action_settings">Settings</string>
    <string name="nouveau_colis">Ajout d\'un nouveau colis</string>
    <string name="Reference_colis"> Référence</string>
    <string name="transporteur">Transporteur</string>
    <string-array name="list_transporteur">
        <item>Chronopost</item>
        <item>Colissimo</item>
        <item>UPS</item>

    </string-array>
    <string name="transporteur_prompt">Choisir un transporteur</string>
    <string name="description">Description</string>
    <string name="boutonAjouterColis">Ajouter</string>
    <string name="boutonModifierColis">Modifier</string>
</resources>
